--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,9 @@
     <body>
        <div class="main-content">
             {{>header}}
+            <p>
+                This site is created by Aniruddh Deshpande. It uses mapbox and darksky.
+            </p>
         </div>
         <div class="footer-content">
             {{>footer}}
