--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,6 +14,9 @@
             </form>
             <p id="message-1"></p>
             <p id="message-2"></p>
+            <p id="message-3"></p>
+            <p id="message-4"></p>
+            <p id="message-5"></p>
         </div>   
         <div class="footer-content">
             {{>footer}}
